Fix profile image distortion

--- a/css/layout.css
+++ b/css/layout.css
@@ -207,8 +207,7 @@ ul#nav li.current a { color: #F06000; }
 }
 #about .profile-pic {
    position: relative;
-   width: 360px;
-   height: 380px;
+   width: 300px;
    border-radius: 15%;
 }
 #about .contact-details { width: 41.66667%; }
