--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -51,7 +51,6 @@
    ------------------------------------------------------------------- */
    #about .profile-pic {
       width: 114px;
-      height: 114px;
       margin-left: 12px;
    }
    #about .contact-details { width: 50%; }
